// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectableCard renders correctly with checkbox type 1`] = `
<DocumentFragment>
  .cache-1crci7q-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-1crci7q-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1crci7q-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1crci7q-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-1crci7q-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement[aria-disabled='true'] .eu28k4m3 .eu28k4m6 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-1crci7q-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1crci7q-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-1crci7q-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-1crci7q-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1crci7q-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement:hover,
.cache-1crci7q-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement:focus-within,
.cache-1crci7q-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement:active {
  border: 1px solid #4f0599;
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-1crci7q-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement svg {
  display: none;
}

.cache-18vdqte-StyledReakitCheckbox {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
}

.cache-18vdqte-StyledReakitCheckbox+.eu28k4m3 .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+svg .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3,
.cache-18vdqte-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3 .eu28k4m6,
.cache-18vdqte-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3,
.cache-18vdqte-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3 .eu28k4m6,
.cache-18vdqte-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1m7zzqc-StyledIcon {
  margin-right: 8px;
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<label
    aria-disabled="false"
    class="ejleepd0 eu28k4m1 e1g1zfwd0 cache-1crci7q-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement"
  >
    <input
      aria-checked="false"
      aria-invalid="false"
      class="cache-18vdqte-StyledReakitCheckbox eu28k4m2"
      name="checkbox"
      type="checkbox"
      value="choice"
    />
    <svg
      class="cache-1m7zzqc-StyledIcon eu28k4m3"
      name="checkbox-blank-outline"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-uzcbt1-InnerCheckbox eu28k4m6"
          height="14"
          rx="1"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          class="cache-1nu9t2r-CheckMark eu28k4m5"
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </g>
    </svg>
    Checkbox card
  </label>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with checkbox type and checked prop 1`] = `
<DocumentFragment>
  .cache-1rzjook-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  border: 1px solid #4f0599;
  color: #4f0599;
}

.cache-1rzjook-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1rzjook-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1rzjook-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-1rzjook-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement[aria-disabled='true'] .eu28k4m3 .eu28k4m6 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-1rzjook-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1rzjook-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-1rzjook-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-1rzjook-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1rzjook-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement:hover,
.cache-1rzjook-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement:focus-within,
.cache-1rzjook-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement:active {
  border: 1px solid #4f0599;
  box-shadow: none;
}

.cache-1rzjook-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement svg {
  display: none;
}

.cache-18vdqte-StyledReakitCheckbox {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
}

.cache-18vdqte-StyledReakitCheckbox+.eu28k4m3 .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+svg .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3,
.cache-18vdqte-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3 .eu28k4m6,
.cache-18vdqte-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3,
.cache-18vdqte-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3 .eu28k4m6,
.cache-18vdqte-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1m7zzqc-StyledIcon {
  margin-right: 8px;
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<label
    aria-disabled="false"
    class="ejleepd0 eu28k4m1 e1g1zfwd0 cache-1rzjook-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement"
  >
    <input
      aria-checked="true"
      aria-invalid="false"
      checked=""
      class="cache-18vdqte-StyledReakitCheckbox eu28k4m2"
      name="radio"
      type="checkbox"
      value="choice"
    />
    <svg
      class="cache-1m7zzqc-StyledIcon eu28k4m3"
      name="checkbox-marked-outline"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-uzcbt1-InnerCheckbox eu28k4m6"
          height="14"
          rx="1"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          class="cache-1nu9t2r-CheckMark eu28k4m5"
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </g>
    </svg>
    Radio card
  </label>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with checkbox type and disabled prop 1`] = `
<DocumentFragment>
  .cache-1rsnnp8-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
}

.cache-1rsnnp8-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1rsnnp8-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1rsnnp8-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-1rsnnp8-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement[aria-disabled='true'] .eu28k4m3 .eu28k4m6 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-1rsnnp8-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1rsnnp8-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-1rsnnp8-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-1rsnnp8-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1rsnnp8-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement svg {
  display: none;
}

.cache-18vdqte-StyledReakitCheckbox {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
}

.cache-18vdqte-StyledReakitCheckbox+.eu28k4m3 .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+svg .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3,
.cache-18vdqte-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3 .eu28k4m6,
.cache-18vdqte-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3,
.cache-18vdqte-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3 .eu28k4m6,
.cache-18vdqte-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1m7zzqc-StyledIcon {
  margin-right: 8px;
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<label
    aria-disabled="true"
    class="ejleepd0 eu28k4m1 e1g1zfwd0 cache-1rsnnp8-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement"
  >
    <input
      aria-checked="false"
      aria-disabled="true"
      aria-invalid="false"
      class="cache-18vdqte-StyledReakitCheckbox eu28k4m2"
      disabled=""
      name="radio"
      style="pointer-events: none;"
      type="checkbox"
      value="choice"
    />
    <svg
      class="cache-1m7zzqc-StyledIcon eu28k4m3"
      name="checkbox-blank-outline"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-uzcbt1-InnerCheckbox eu28k4m6"
          height="14"
          rx="1"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          class="cache-1nu9t2r-CheckMark eu28k4m5"
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </g>
    </svg>
    Radio card
  </label>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with checkbox type and isError prop 1`] = `
<DocumentFragment>
  .cache-20gutv-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  border: 1px solid #a6102d;
  color: #a6102d;
}

.cache-20gutv-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement[aria-disabled='false'] {
  cursor: pointer;
}

.cache-20gutv-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-20gutv-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-20gutv-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement[aria-disabled='true'] .eu28k4m3 .eu28k4m6 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-20gutv-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-20gutv-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-20gutv-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-20gutv-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-20gutv-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement svg {
  display: none;
}

.cache-18vdqte-StyledReakitCheckbox {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
}

.cache-18vdqte-StyledReakitCheckbox+.eu28k4m3 .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+svg .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3,
.cache-18vdqte-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3 .eu28k4m6,
.cache-18vdqte-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3,
.cache-18vdqte-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3 .eu28k4m6,
.cache-18vdqte-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1m7zzqc-StyledIcon {
  margin-right: 8px;
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<label
    aria-disabled="false"
    class="ejleepd0 eu28k4m1 e1g1zfwd0 cache-20gutv-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement"
  >
    <input
      aria-checked="false"
      aria-describedby="radio-hint"
      aria-invalid="true"
      class="cache-18vdqte-StyledReakitCheckbox eu28k4m2"
      name="radio"
      type="checkbox"
      value="choice"
    />
    <svg
      class="cache-1m7zzqc-StyledIcon eu28k4m3"
      name="checkbox-blank-outline"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-uzcbt1-InnerCheckbox eu28k4m6"
          height="14"
          rx="1"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          class="cache-1nu9t2r-CheckMark eu28k4m5"
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </g>
    </svg>
    Radio card
  </label>
  .cache-8c1h4a-StyledText-bodyB-variantStyles-colorStyles-StyledError {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 14px;
  line-height: 18px;
  color: #a6102d;
  padding: 0 4px;
}

<p
    class="eu28k4m4 e1g1zfwd0 cache-8c1h4a-StyledText-bodyB-variantStyles-colorStyles-StyledError"
    id="radio-id"
  />
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with complex children 1`] = `
<DocumentFragment>
  .cache-1rsnnp8-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
}

.cache-1rsnnp8-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1rsnnp8-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1rsnnp8-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-1rsnnp8-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement[aria-disabled='true'] .eu28k4m3 .eu28k4m6 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-1rsnnp8-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1rsnnp8-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-1rsnnp8-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-1rsnnp8-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1rsnnp8-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement svg {
  display: none;
}

.cache-18vdqte-StyledReakitCheckbox {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
}

.cache-18vdqte-StyledReakitCheckbox+.eu28k4m3 .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+svg .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3,
.cache-18vdqte-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3 .eu28k4m6,
.cache-18vdqte-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3,
.cache-18vdqte-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3 .eu28k4m6,
.cache-18vdqte-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1m7zzqc-StyledIcon {
  margin-right: 8px;
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<label
    aria-disabled="true"
    class="ejleepd0 eu28k4m1 e1g1zfwd0 cache-1rsnnp8-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement"
  >
    <input
      aria-checked="false"
      aria-disabled="true"
      aria-invalid="false"
      class="cache-18vdqte-StyledReakitCheckbox eu28k4m2"
      disabled=""
      name="radio"
      style="pointer-events: none;"
      type="checkbox"
      value="choice"
    />
    <svg
      class="cache-1m7zzqc-StyledIcon eu28k4m3"
      name="checkbox-blank-outline"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-uzcbt1-InnerCheckbox eu28k4m6"
          height="14"
          rx="1"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          class="cache-1nu9t2r-CheckMark eu28k4m5"
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </g>
    </svg>
    <div
      style="background: gray; color: gray;"
    >
      Complex radio card
    </div>
  </label>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with default props 1`] = `
<DocumentFragment>
  .cache-tm71ep-StyledText-variantStyles-StyledRadioContainer-StyledElement {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-tm71ep-StyledText-variantStyles-StyledRadioContainer-StyledElement[aria-disabled='false'] {
  cursor: pointer;
}

.cache-tm71ep-StyledText-variantStyles-StyledRadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-tm71ep-StyledText-variantStyles-StyledRadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-tm71ep-StyledText-variantStyles-StyledRadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-tm71ep-StyledText-variantStyles-StyledRadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-tm71ep-StyledText-variantStyles-StyledRadioContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-tm71ep-StyledText-variantStyles-StyledRadioContainer-StyledElement[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-tm71ep-StyledText-variantStyles-StyledRadioContainer-StyledElement[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-tm71ep-StyledText-variantStyles-StyledRadioContainer-StyledElement:hover,
.cache-tm71ep-StyledText-variantStyles-StyledRadioContainer-StyledElement:focus-within,
.cache-tm71ep-StyledText-variantStyles-StyledRadioContainer-StyledElement:active {
  border: 1px solid #4f0599;
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-tm71ep-StyledText-variantStyles-StyledRadioContainer-StyledElement svg {
  display: none;
}

.cache-h7u1sr-StyledRadio {
  opacity: 0.01;
  width: px;
  height: px;
  position: absolute;
  cursor: pointer;
}

.cache-h7u1sr-StyledRadio+.e1duuirp2 .e1duuirp3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-h7u1sr-StyledRadio[aria-checked='true']+svg .e1duuirp3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-h7u1sr-StyledRadio[aria-checked='true'][aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #390171;
}

.cache-h7u1sr-StyledRadio[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-h7u1sr-StyledRadio:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-h7u1sr-StyledRadio:focus+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-h7u1sr-StyledRadio[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-h7u1sr-StyledRadio[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-gjpbat-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-gjpbat-StyledIcon .e1duuirp4 {
  fill: #ffffff;
}

.cache-p50c5x-InnerCircleRing {
  fill: #ffffff;
}

<label
    aria-disabled="false"
    class="ejleepd0 e1duuirp0 e1g1zfwd0 cache-tm71ep-StyledText-variantStyles-StyledRadioContainer-StyledElement"
  >
    <input
      aria-checked="false"
      aria-disabled="false"
      aria-invalid="false"
      class="cache-h7u1sr-StyledRadio e1duuirp1"
      id="id-d9i348"
      name="radio"
      tabindex="0"
      type="radio"
      value="choice"
    />
    <svg
      class="cache-gjpbat-StyledIcon e1duuirp2"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <circle
          cx="12"
          cy="12"
          r="8"
          stroke-width="2"
        />
        <circle
          class="cache-p50c5x-InnerCircleRing e1duuirp4"
          cx="12"
          cy="12"
          r="6"
        />
        <circle
          class="cache-ivayk3-RadioMark e1duuirp3"
          cx="12"
          cy="12"
          r="4"
        />
      </g>
    </svg>
    Radio card
  </label>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with radio type and checked prop 1`] = `
<DocumentFragment>
  .cache-1ro4vvu-StyledText-variantStyles-StyledRadioContainer-StyledElement {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  border: 1px solid #4f0599;
  color: #4f0599;
}

.cache-1ro4vvu-StyledText-variantStyles-StyledRadioContainer-StyledElement[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1ro4vvu-StyledText-variantStyles-StyledRadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1ro4vvu-StyledText-variantStyles-StyledRadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-1ro4vvu-StyledText-variantStyles-StyledRadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1ro4vvu-StyledText-variantStyles-StyledRadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-1ro4vvu-StyledText-variantStyles-StyledRadioContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1ro4vvu-StyledText-variantStyles-StyledRadioContainer-StyledElement[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-1ro4vvu-StyledText-variantStyles-StyledRadioContainer-StyledElement[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-1ro4vvu-StyledText-variantStyles-StyledRadioContainer-StyledElement:hover,
.cache-1ro4vvu-StyledText-variantStyles-StyledRadioContainer-StyledElement:focus-within,
.cache-1ro4vvu-StyledText-variantStyles-StyledRadioContainer-StyledElement:active {
  border: 1px solid #4f0599;
  box-shadow: none;
}

.cache-1ro4vvu-StyledText-variantStyles-StyledRadioContainer-StyledElement svg {
  display: none;
}

.cache-h7u1sr-StyledRadio {
  opacity: 0.01;
  width: px;
  height: px;
  position: absolute;
  cursor: pointer;
}

.cache-h7u1sr-StyledRadio+.e1duuirp2 .e1duuirp3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-h7u1sr-StyledRadio[aria-checked='true']+svg .e1duuirp3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-h7u1sr-StyledRadio[aria-checked='true'][aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #390171;
}

.cache-h7u1sr-StyledRadio[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-h7u1sr-StyledRadio:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-h7u1sr-StyledRadio:focus+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-h7u1sr-StyledRadio[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-h7u1sr-StyledRadio[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-gjpbat-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-gjpbat-StyledIcon .e1duuirp4 {
  fill: #ffffff;
}

.cache-p50c5x-InnerCircleRing {
  fill: #ffffff;
}

<label
    aria-disabled="false"
    class="ejleepd0 e1duuirp0 e1g1zfwd0 cache-1ro4vvu-StyledText-variantStyles-StyledRadioContainer-StyledElement"
  >
    <input
      aria-checked="true"
      aria-disabled="false"
      aria-invalid="false"
      checked=""
      class="cache-h7u1sr-StyledRadio e1duuirp1"
      id="id-d9i348"
      name="radio"
      tabindex="0"
      type="radio"
      value="choice"
    />
    <svg
      class="cache-gjpbat-StyledIcon e1duuirp2"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <circle
          cx="12"
          cy="12"
          r="8"
          stroke-width="2"
        />
        <circle
          class="cache-p50c5x-InnerCircleRing e1duuirp4"
          cx="12"
          cy="12"
          r="6"
        />
        <circle
          class="cache-ivayk3-RadioMark e1duuirp3"
          cx="12"
          cy="12"
          r="4"
        />
      </g>
    </svg>
    Radio card
  </label>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with radio type and disabled prop 1`] = `
<DocumentFragment>
  .cache-2s3l0o-StyledText-variantStyles-StyledRadioContainer-StyledElement {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
}

.cache-2s3l0o-StyledText-variantStyles-StyledRadioContainer-StyledElement[aria-disabled='false'] {
  cursor: pointer;
}

.cache-2s3l0o-StyledText-variantStyles-StyledRadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-2s3l0o-StyledText-variantStyles-StyledRadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-2s3l0o-StyledText-variantStyles-StyledRadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-2s3l0o-StyledText-variantStyles-StyledRadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-2s3l0o-StyledText-variantStyles-StyledRadioContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-2s3l0o-StyledText-variantStyles-StyledRadioContainer-StyledElement[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-2s3l0o-StyledText-variantStyles-StyledRadioContainer-StyledElement[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-2s3l0o-StyledText-variantStyles-StyledRadioContainer-StyledElement svg {
  display: none;
}

.cache-h7u1sr-StyledRadio {
  opacity: 0.01;
  width: px;
  height: px;
  position: absolute;
  cursor: pointer;
}

.cache-h7u1sr-StyledRadio+.e1duuirp2 .e1duuirp3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-h7u1sr-StyledRadio[aria-checked='true']+svg .e1duuirp3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-h7u1sr-StyledRadio[aria-checked='true'][aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #390171;
}

.cache-h7u1sr-StyledRadio[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-h7u1sr-StyledRadio:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-h7u1sr-StyledRadio:focus+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-h7u1sr-StyledRadio[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-h7u1sr-StyledRadio[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-gjpbat-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-gjpbat-StyledIcon .e1duuirp4 {
  fill: #ffffff;
}

.cache-p50c5x-InnerCircleRing {
  fill: #ffffff;
}

<label
    aria-disabled="true"
    class="ejleepd0 e1duuirp0 e1g1zfwd0 cache-2s3l0o-StyledText-variantStyles-StyledRadioContainer-StyledElement"
  >
    <input
      aria-checked="false"
      aria-disabled="true"
      aria-invalid="false"
      class="cache-h7u1sr-StyledRadio e1duuirp1"
      disabled=""
      id="id-d9i348"
      name="radio"
      style="pointer-events: none;"
      type="radio"
      value="choice"
    />
    <svg
      class="cache-gjpbat-StyledIcon e1duuirp2"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <circle
          cx="12"
          cy="12"
          r="8"
          stroke-width="2"
        />
        <circle
          class="cache-p50c5x-InnerCircleRing e1duuirp4"
          cx="12"
          cy="12"
          r="6"
        />
        <circle
          class="cache-ivayk3-RadioMark e1duuirp3"
          cx="12"
          cy="12"
          r="4"
        />
      </g>
    </svg>
    Radio card
  </label>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with radio type and isError prop 1`] = `
<DocumentFragment>
  .cache-1y4kmdq-StyledText-variantStyles-StyledRadioContainer-StyledElement {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  border: 1px solid #a6102d;
  color: #a6102d;
}

.cache-1y4kmdq-StyledText-variantStyles-StyledRadioContainer-StyledElement[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1y4kmdq-StyledText-variantStyles-StyledRadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1y4kmdq-StyledText-variantStyles-StyledRadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-1y4kmdq-StyledText-variantStyles-StyledRadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1y4kmdq-StyledText-variantStyles-StyledRadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-1y4kmdq-StyledText-variantStyles-StyledRadioContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1y4kmdq-StyledText-variantStyles-StyledRadioContainer-StyledElement[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-1y4kmdq-StyledText-variantStyles-StyledRadioContainer-StyledElement[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-1y4kmdq-StyledText-variantStyles-StyledRadioContainer-StyledElement svg {
  display: none;
}

.cache-h7u1sr-StyledRadio {
  opacity: 0.01;
  width: px;
  height: px;
  position: absolute;
  cursor: pointer;
}

.cache-h7u1sr-StyledRadio+.e1duuirp2 .e1duuirp3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-h7u1sr-StyledRadio[aria-checked='true']+svg .e1duuirp3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-h7u1sr-StyledRadio[aria-checked='true'][aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #390171;
}

.cache-h7u1sr-StyledRadio[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-h7u1sr-StyledRadio:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-h7u1sr-StyledRadio:focus+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-h7u1sr-StyledRadio[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-h7u1sr-StyledRadio[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-gjpbat-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-gjpbat-StyledIcon .e1duuirp4 {
  fill: #ffffff;
}

.cache-p50c5x-InnerCircleRing {
  fill: #ffffff;
}

<label
    aria-disabled="false"
    class="ejleepd0 e1duuirp0 e1g1zfwd0 cache-1y4kmdq-StyledText-variantStyles-StyledRadioContainer-StyledElement"
  >
    <input
      aria-checked="false"
      aria-disabled="false"
      aria-invalid="true"
      class="cache-h7u1sr-StyledRadio e1duuirp1"
      id="id-d9i348"
      name="radio"
      tabindex="0"
      type="radio"
      value="choice"
    />
    <svg
      class="cache-gjpbat-StyledIcon e1duuirp2"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <circle
          cx="12"
          cy="12"
          r="8"
          stroke-width="2"
        />
        <circle
          class="cache-p50c5x-InnerCircleRing e1duuirp4"
          cx="12"
          cy="12"
          r="6"
        />
        <circle
          class="cache-ivayk3-RadioMark e1duuirp3"
          cx="12"
          cy="12"
          r="4"
        />
      </g>
    </svg>
    Radio card
  </label>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with showTick and type checkbox 1`] = `
<DocumentFragment>
  .cache-8l5797-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-8l5797-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement[aria-disabled='false'] {
  cursor: pointer;
}

.cache-8l5797-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-8l5797-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-8l5797-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement[aria-disabled='true'] .eu28k4m3 .eu28k4m6 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-8l5797-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-8l5797-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-8l5797-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-8l5797-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-8l5797-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement:hover,
.cache-8l5797-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement:focus-within,
.cache-8l5797-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement:active {
  border: 1px solid #4f0599;
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-18vdqte-StyledReakitCheckbox {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
}

.cache-18vdqte-StyledReakitCheckbox+.eu28k4m3 .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+svg .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3,
.cache-18vdqte-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox[aria-checked='true']+.eu28k4m3 .eu28k4m6,
.cache-18vdqte-StyledReakitCheckbox[aria-checked='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3,
.cache-18vdqte-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']+.eu28k4m3 .eu28k4m6,
.cache-18vdqte-StyledReakitCheckbox[aria-invalid='mixed']+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-18vdqte-StyledReakitCheckbox:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-18vdqte-StyledReakitCheckbox[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m6 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1m7zzqc-StyledIcon {
  margin-right: 8px;
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<label
    aria-disabled="false"
    class="ejleepd0 eu28k4m1 e1g1zfwd0 cache-8l5797-StyledText-variantStyles-StyledCheckBoxContainer-StyledElement"
  >
    <input
      aria-checked="false"
      aria-invalid="false"
      class="cache-18vdqte-StyledReakitCheckbox eu28k4m2"
      name="checkbox"
      type="checkbox"
      value="choice"
    />
    <svg
      class="cache-1m7zzqc-StyledIcon eu28k4m3"
      name="checkbox-blank-outline"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <rect
          class="cache-uzcbt1-InnerCheckbox eu28k4m6"
          height="14"
          rx="1"
          stroke-width="2"
          width="14"
          x="5"
          y="5"
        />
        <rect
          class="cache-1nu9t2r-CheckMark eu28k4m5"
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </g>
    </svg>
    Checkbox card
  </label>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with showTick and type radio 1`] = `
<DocumentFragment>
  .cache-e519sq-StyledText-variantStyles-StyledRadioContainer-StyledElement {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-e519sq-StyledText-variantStyles-StyledRadioContainer-StyledElement[aria-disabled='false'] {
  cursor: pointer;
}

.cache-e519sq-StyledText-variantStyles-StyledRadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-e519sq-StyledText-variantStyles-StyledRadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-e519sq-StyledText-variantStyles-StyledRadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-e519sq-StyledText-variantStyles-StyledRadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-e519sq-StyledText-variantStyles-StyledRadioContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-e519sq-StyledText-variantStyles-StyledRadioContainer-StyledElement[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-e519sq-StyledText-variantStyles-StyledRadioContainer-StyledElement[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-e519sq-StyledText-variantStyles-StyledRadioContainer-StyledElement:hover,
.cache-e519sq-StyledText-variantStyles-StyledRadioContainer-StyledElement:focus-within,
.cache-e519sq-StyledText-variantStyles-StyledRadioContainer-StyledElement:active {
  border: 1px solid #4f0599;
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-h7u1sr-StyledRadio {
  opacity: 0.01;
  width: px;
  height: px;
  position: absolute;
  cursor: pointer;
}

.cache-h7u1sr-StyledRadio+.e1duuirp2 .e1duuirp3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-h7u1sr-StyledRadio[aria-checked='true']+svg .e1duuirp3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-h7u1sr-StyledRadio[aria-checked='true'][aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #390171;
}

.cache-h7u1sr-StyledRadio[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-h7u1sr-StyledRadio:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-h7u1sr-StyledRadio:focus+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-h7u1sr-StyledRadio[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-h7u1sr-StyledRadio[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-gjpbat-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-gjpbat-StyledIcon .e1duuirp4 {
  fill: #ffffff;
}

.cache-p50c5x-InnerCircleRing {
  fill: #ffffff;
}

<label
    aria-disabled="false"
    class="ejleepd0 e1duuirp0 e1g1zfwd0 cache-e519sq-StyledText-variantStyles-StyledRadioContainer-StyledElement"
  >
    <input
      aria-checked="false"
      aria-disabled="false"
      aria-invalid="false"
      class="cache-h7u1sr-StyledRadio e1duuirp1"
      id="id-d9i348"
      name="checkbox"
      tabindex="0"
      type="radio"
      value="choice"
    />
    <svg
      class="cache-gjpbat-StyledIcon e1duuirp2"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <circle
          cx="12"
          cy="12"
          r="8"
          stroke-width="2"
        />
        <circle
          class="cache-p50c5x-InnerCircleRing e1duuirp4"
          cx="12"
          cy="12"
          r="6"
        />
        <circle
          class="cache-ivayk3-RadioMark e1duuirp3"
          cx="12"
          cy="12"
          r="4"
        />
      </g>
    </svg>
    Checkbox card
  </label>
</DocumentFragment>
`;
